fixed some layout issues

--- a/public/src/vue/less/_globals.less
+++ b/public/src/vue/less/_globals.less
@@ -16,7 +16,7 @@ button, .button {
   margin: 0;
   cursor: pointer;
 
-  min-height: @t-skipline;
+  min-height: @t-skipline * 2;
 
   padding: 0 @t-skipline/2;
   border-radius: @t-buttonradius;
